--- a/CSS/fonts.css
+++ b/CSS/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Outfit";
-    src: url("../Fonts/Outfit/Outfit-Regular.ttf") format("ttf");
+    src: url("../Fonts/Outfit/Outfit-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: "Outfit";
-    src: url("../Fonts/Outfit/Outfit-Bold.ttf") format("ttf");
+    src: url("../Fonts/Outfit/Outfit-Bold.ttf") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
